tests/ui/span/issue-24805-dropck-child-has-items-via-parent.stderr
error[E0597]: `d1` does not live long enough
  --> $DIR/issue-24805-dropck-child-has-items-via-parent.rs:28:18
   |
LL |     _d = D_Child(&d1);
   |                  ^^^ borrowed value does not live long enough
...
LL | }
   | -
   | |
   | `d1` dropped here while still borrowed
   | borrow might be used here, when `_d` is dropped and runs the `Drop` code for type `D_Child`
   |
   = note: values in a scope are dropped in the opposite order they are defined

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
